# python-api-client

./: .gitignore  README.md  pyproject.toml
worksection/: __init__.py  client.py  exception.py  http.py  oauth.py  resource.py
worksection/exceptions/: __init__.py  response_exception.py  unauthorized_exception.py
worksection/models/: __init__.py  comment.py  contact.py  contact_group.py  cost.py  cost_project.py  cost_task.py  cost_total.py  custom_field.py  custom_value.py  downloaded_file.py  event.py  event_action_enum.py  event_object.py  file.py  model.py  project.py  project_group.py  project_user.py  schedule.py  tag.py  tag_group.py  task.py  timer.py  uploaded_file.py  user.py  user_group.py  user_role_enum.py  webhook.py
worksection/resources/: __init__.py  comments_resource.py  contacts_resource.py  costs_resource.py  events_resource.py  files_resource.py  members_resource.py  projects_resource.py  tasks_resource.py  timers_resource.py  user_resource.py  webhook_resource.py
