[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "worksection-api-client"
version = "2.1.0"
description = "API client library for Worksection"
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["worksection*"]